--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,10 @@ main {
   -moz-box-shadow: 2px 3px 22px -3px rgba(0, 0, 0, 0.73);
 }
 
+.calculator-result {
+  height: 30%;
+}
+
 footer {
   background: rgb(37, 41, 50);
   display: flex;
