--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,60 @@ main {
 
 .calculator-result {
   height: 30%;
+  background: rgb(25, 28, 33);
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+}
+.calculator-result p {
+  position: relative;
+  top: 80px;
+  right: 10px;
+  text-align: right;
+  max-width: 248px;
+  color: white;
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.buttons-calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 60px);
+  grid-template-rows: repeat(5, 60px);
+  row-gap: 4px;
+  background: rgb(37, 41, 50);
+  padding: 4px;
+}
+
+.buttom {
+  font-size: 1.2rem;
+}
+.buttom:hover {
+  background: rgb(51, 55, 66);
+}
+.n {
+  background: rgb(37, 41, 50);
+  border-style: none;
+  outline: none;
+  border-radius: 20px;
+  color: white;
+}
+.b {
+  background: rgb(37, 41, 50);
+  border-style: none;
+  outline: none;
+  border-radius: 20px;
+  color: green;
+}
+.f {
+  background: rgb(37, 41, 50);
+  border-style: none;
+  outline: none;
+  border-radius: 20px;
+  color: red;
+  font-size: 1.5rem;
+}
+.point {
+  font-size: 2rem;
+  padding-bottom: 15px;
 }
 
 footer {
@@ -78,8 +132,7 @@ footer {
 }
 .linkSocial {
   display: flex;
-  justify-content: right;
-  margin: 0 0 0 20px;
+  margin: auto;
 }
 .Social img {
   width: 30px;
