--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
 header {
   display: flex;
   background: rgb(37, 41, 50);
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(25, 28, 33);
   height: 10vh;
   width: 100%;
   min-width: 320px;
