--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,17 +5,11 @@
 }
 
 body {
-  background: rgb(97, 96, 96);
+  background: rgb(129, 127, 127);
 }
 
 header {
   display: flex;
-  background: rgb(37, 41, 50);
-  border-bottom: 2px solid rgb(25, 28, 33);
-  height: 10vh;
-  width: 100%;
-  min-width: 320px;
-  align-items: center;
   justify-content: center;
   color: white;
 }
@@ -23,6 +17,7 @@ header img {
   margin: 10px;
 }
 header h1 {
+  padding-top: 8px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -30,49 +25,50 @@ header h1 {
 main {
   display: flex;
   width: 100%;
-  height: 540px;
+  height: auto;
   justify-content: center;
 }
-
 .main__container {
   background: rgb(37, 41, 50);
   height: 500px;
   border-radius: 25px;
-  margin: 20px;
-  box-shadow: 2px 3px 22px -3px rgba(0, 0, 0, 0.73);
+  margin: 10px;
   -webkit-box-shadow: 2px 3px 22px -3px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 2px 3px 22px -3px rgba(0, 0, 0, 0.73);
 }
 
 .calculator-result {
+  display: grid;
+  grid-row: 50% 50%;
   height: 30%;
   background: rgb(25, 28, 33);
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-}
-.calculator-result p {
-  position: relative;
-  top: 80px;
-  right: 10px;
-  text-align: right;
-  max-width: 248px;
-  color: white;
-  font-size: 2rem;
+  padding-right: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: right;
+  align-items: center;
 }
+.previous-operation {
+  color: white;
+}
+.operation {
+  color: white;
+  font-size: 1.3rem;
+}
+
 .buttons-calculator {
   display: grid;
-  grid-template-columns: repeat(4, 60px);
+  grid-template-columns: repeat(4, 70px);
   grid-template-rows: repeat(5, 60px);
   row-gap: 4px;
   background: rgb(37, 41, 50);
   padding: 4px;
 }
-
-.buttom {
+button {
   font-size: 1.2rem;
 }
-.buttom:hover {
+button:hover {
   background: rgb(51, 55, 66);
 }
 .n {
@@ -105,37 +101,42 @@ main {
 footer {
   background: rgb(37, 41, 50);
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  min-width: 320px;
 }
 .finalFooter {
-  display: flex;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
+  margin: 5px 16px 6px 16px;
   align-items: center;
-  margin: 10px 15px 10px 15px;
-  width: auto;
+  width: 100%;
 }
 .designe-rights {
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-}
-.designe {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 10px;
 }
-.designe a {
+.designe-rights p {
+  margin: 0 10px;
+}
+.designe-rights a {
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: white;
   cursor: pointer;
 }
+.designe-rights a:hover {
+  text-decoration: underline;
+}
 .linkSocial {
   display: flex;
-  margin: auto;
+  justify-content: center;
 }
 .Social img {
   width: 30px;
   height: 30px;
-  margin: 10px;
+  margin: 5px 12px;
 }
