--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,11 +13,8 @@ header {
   justify-content: center;
   color: white;
 }
-header img {
-  margin: 10px;
-}
 header h1 {
-  padding-top: 8px;
+  padding-top: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -28,9 +25,16 @@ main {
   height: auto;
   justify-content: center;
 }
+.main-calculator {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  min-height: 85vh;
+}
 .main__container {
   background: rgb(37, 41, 50);
   height: 500px;
+  width: 290px;
   border-radius: 25px;
   margin: 10px;
   -webkit-box-shadow: 2px 3px 22px -3px rgba(0, 0, 0, 0.73);
@@ -39,15 +43,17 @@ main {
 
 .calculator-result {
   display: grid;
-  grid-row: 50% 50%;
-  height: 30%;
+  height: 155px;
   background: rgb(25, 28, 33);
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-  padding-right: 20px;
+  padding-right: 15px;
+  padding-left: 10px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: right;
   align-items: center;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 .previous-operation {
   color: white;
@@ -64,6 +70,9 @@ main {
   row-gap: 4px;
   background: rgb(37, 41, 50);
   padding: 4px;
+  height: 345px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 button {
   font-size: 1.2rem;
@@ -102,6 +111,7 @@ footer {
   background: rgb(37, 41, 50);
   display: flex;
   min-width: 320px;
+  min-height: 15vh;
 }
 .finalFooter {
   display: grid;
